--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Recuperacion-Ciclo4-Movil</string>
+    <string name="iniciar_sesion">INICIAR SESIÓN</string>
 </resources>
